--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "firebase": "^8.6.1",
     "firebase-admin": "^9.7.0",
     "firebase-functions": "^3.13.2",
     "node-sass": "^5.0.0",
