--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "kaimosi-rotary-club",
+  "homepage": "https://www.kaimosirotaryclub.org",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
